deletion of useless code