@@ -15,13 +15,10 @@ public class BlockDistance2D extends Block {
         Type i1 = inputs.get(0);
         Type i2 = inputs.get(1);
         double output = Math.sqrt(Math.pow(i1.getVal("x") - i2.getVal("x"),2) + 
-            Math.pow(i1.getVal("y") - i2.getVal("y"), 2));
-        for (Type dst : outputs.get(0).getDst()) {
-            dst.putVal("simple", output);
-        }
-        for (Type cur : outputs) {
-            cur.putVal("simple", output);
-        }
+        Math.pow(i1.getVal("y") - i2.getVal("y"), 2));
+        Type cur = outputs.getFirst();
+        cur.putVal("simple", output);
+        cur.step();
         this.setShadow(Color.GREEN);
         System.out.println("final output "+output);
         this.showValues();
